Updated spring mvc project